--- a/now.json
+++ b/now.json
@@ -1,13 +1,4 @@
 {
   "version": 2,
-  "github": {
-    "silent": true
-  },
-  "builds": [
-    {
-      "src": "build.sh",
-      "use": "@now/static-build",
-      "config": { "distDir": "site" }
-    }
-  ]
+  "github": { "silent": true }
 }
