Run build twice to properly generate plots

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "preinstall": "python3 -m pip install nbconvert",
     "install": "python3 -m pip install -r requirements.txt git+https://github.com/lgeiger/pydoc-markdown.git -e .[docs]",
     "prebuild": "python3 generate_api_docs.py",
-    "build": "python3 -m mkdocs build -d public"
+    "build:docs": "python3 -m mkdocs build -d public",
+    "build": "npm run build:docs && npm run build:docs",
+    "dev": "python3 -m mkdocs serve"
   }
 }
