--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Check import order with isort
         run: isort --check-only --diff
       - name: Type check with PyType
-        run: pytype
+        run: pytype --jobs 2
