RFC: Quantizers as subclasses of keras.layer.Layer (#387)
* breaking-change: Remove functional quantizers

* Make Quantizers subclasses of Keras Layers

* Change documentation to recommend new class based API

* Fix Quantizer docs

* Add ApproxSign to __all__ and fix md syntax

* Reset session in graph mode tests

This is required for TensorFlow < 2.1. With this we are required to use the graph_mode fixture before setting a distribution scope, otherwhise the cleanup will error

* Use TF 2.1 for linting

* Skip tests for unsupported usage in TF 1.14

We can add a workaround later if users need this feature for TF 1.14, but for now let's skip the tests

* Simplify dorefa quantizer

* Run pytype in parallel

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: 3.7
       - name: Install project dependencies
         run: |
-          pip install tensorflow==2.0.0
+          pip install tensorflow==2.1.0
           pip install -e .[test]
       - name: Run Flake8
         run: flake8
@@ -27,4 +27,4 @@ jobs:
       - name: Check import order with isort
         run: isort --check-only --diff
       - name: Type check with PyType
-        run: pytype
+        run: pytype --jobs 2
