--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -14,7 +14,7 @@ jobs:
         tf-version: [1.14.0, 1.15.2, 2.0.1, 2.1.0]
         python-version: [3.7]
         include:
-          - tf-version: 2.2.0rc2
+          - tf-version: 2.2.0
             python-version: 3.8
 
     steps:
