--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tf-version: [1.14.0, 1.15.2, 2.0.1, 2.1.0]
+        tf-version: [1.14.0, 1.15.2, 2.0.1, 2.1.0, 2.3.0rc0]
         python-version: [3.7]
         include:
           - tf-version: 2.2.0
@@ -39,7 +39,7 @@ jobs:
           python-version: 3.6
       - name: Install dependencies
         run: |
-          pip install tensorflow-cpu==2.1.0
+          pip install tensorflow-cpu==2.2.0
           pip install -e .[test]
       - name: Generate coverage report
         run: pytest . -n auto --cov=larq --cov-report=xml --cov-config=.coveragerc
