--- a/setup.cfg
+++ b/setup.cfg
@@ -7,16 +7,14 @@ exclude = build,dist,env,.pytype,larq/snapshots
 
 [isort]
 
-# Settings for compatibility with black.
+profile = black
 line_length = 88
-use_parentheses = True
-multi_line_output = 3
-include_trailing_comma = True
-combine_as_imports = True
 skip =
     build
     dist
-    env
+    venv
+    .venv
+    .git
     .pytype
     larq/snapshots
 
