--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tf-version: [1.14.0, 1.15.4, 2.0.3, 2.1.2, 2.2.1, 2.3.1, 2.4.0rc0]
+        tf-version: [1.14.0, 1.15.4, 2.0.3, 2.1.2, 2.2.1, 2.3.1, 2.4.0]
         python-version: [3.7]
         include:
           - tf-version: 2.2.1
