--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.3, 2.2.2, 2.3.2, 2.4.1, 2.5.0rc2]
+        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.3, 2.2.2, 2.3.2, 2.4.1, 2.5.0]
         python-version: [3.7]
         include:
           - tf-version: 2.4.1
             python-version: 3.6
           - tf-version: 2.4.1
             python-version: 3.8
-          - tf-version: 2.5.0rc2
+          - tf-version: 2.5.0
             python-version: 3.9
 
     steps:
