Also Test TF 2.6 against Python 3.9

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -20,6 +20,8 @@ jobs:
             python-version: 3.8
           - tf-version: 2.5.0
             python-version: 3.9
+          - tf-version: 2.6.0
+            python-version: 3.9
 
     steps:
       - uses: actions/checkout@v2
