--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,20 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.4, 2.2.3, 2.3.4, 2.4.4, 2.5.2, 2.6.2, 2.7.0, 2.8.0]
+        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.4, 2.2.3, 2.3.4, 2.4.4, 2.5.3, 2.6.3, 2.7.1, 2.8.0, 2.9.0rc0]
         python-version: [3.7]
         include:
           - tf-version: 2.4.4
             python-version: 3.6
           - tf-version: 2.4.4
             python-version: 3.8
-          - tf-version: 2.5.2
+          - tf-version: 2.5.3
             python-version: 3.9
-          - tf-version: 2.6.2
+          - tf-version: 2.6.3
             python-version: 3.9
-          - tf-version: 2.7.0
+          - tf-version: 2.7.1
             python-version: 3.9
           - tf-version: 2.8.0
+            python-version: 3.9
+          - tf-version: 2.9.0rc0
             python-version: 3.9
 
     steps:
