--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.4, 2.2.3, 2.3.4, 2.4.4, 2.5.3, 2.6.3, 2.7.1, 2.8.0, 2.9.0rc1]
+        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.4, 2.2.3, 2.3.4, 2.4.4, 2.5.3, 2.6.4, 2.7.2, 2.8.1, 2.9.0]
         python-version: [3.7]
         include:
           - tf-version: 2.4.4
@@ -20,13 +20,13 @@ jobs:
             python-version: 3.8
           - tf-version: 2.5.3
             python-version: 3.9
-          - tf-version: 2.6.3
+          - tf-version: 2.6.4
             python-version: 3.9
-          - tf-version: 2.7.1
+          - tf-version: 2.7.2
             python-version: 3.9
-          - tf-version: 2.8.0
+          - tf-version: 2.8.1
             python-version: "3.10"
-          - tf-version: 2.9.0rc1
+          - tf-version: 2.9.0
             python-version: "3.10"
 
     steps:
