--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.4, 2.2.3, 2.3.4, 2.4.4, 2.5.3, 2.6.4, 2.7.2, 2.8.1, 2.9.0]
+        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.4, 2.2.3, 2.3.4, 2.4.4, 2.5.3, 2.6.5, 2.7.3, 2.8.2, 2.9.1]
         python-version: [3.7]
         include:
           - tf-version: 2.4.4
@@ -20,13 +20,13 @@ jobs:
             python-version: 3.8
           - tf-version: 2.5.3
             python-version: 3.9
-          - tf-version: 2.6.4
+          - tf-version: 2.6.5
             python-version: 3.9
-          - tf-version: 2.7.2
+          - tf-version: 2.7.3
             python-version: 3.9
-          - tf-version: 2.8.1
+          - tf-version: 2.8.2
             python-version: "3.10"
-          - tf-version: 2.9.0
+          - tf-version: 2.9.1
             python-version: "3.10"
 
     steps:
@@ -37,6 +37,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          pip install 'protobuf < 3.20'
           pip install tensorflow-cpu==${{matrix.tf-version}} || pip install tensorflow==${{matrix.tf-version}}
           pip install -e .[test]
       - name: Test with pytest
