--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.4, 2.2.3, 2.3.4, 2.4.4, 2.5.3, 2.6.5, 2.7.3, 2.8.2, 2.9.1, 2.10.0]
+        tf-version: [1.14.0, 1.15.5, 2.0.4, 2.1.4, 2.2.3, 2.3.4, 2.4.4, 2.5.3, 2.6.5, 2.7.3, 2.8.2, 2.9.1, 2.10.0, 2.11.0rc2]
         python-version: [3.7]
         include:
           - tf-version: 2.4.4
@@ -29,6 +29,8 @@ jobs:
           - tf-version: 2.9.1
             python-version: "3.10"
           - tf-version: 2.10.0
+            python-version: "3.10"
+          - tf-version: 2.11.0rc2
             python-version: "3.10"
 
     steps:
