--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -30,6 +30,10 @@ jobs:
             python-version: "3.10"
           - tf-version: 2.11.1
             python-version: "3.10"
+          - tf-version: 2.12.0
+            python-version: "3.8"
+          - tf-version: 2.12.0
+            python-version: "3.11"
 
     steps:
       - uses: actions/checkout@v3
