--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -38,7 +38,7 @@ jobs:
             python-version: "3.8"
           - tf-version: 2.13.0
             python-version: "3.11"
-          - tf-version: 2.14.0rc0
+          - tf-version: 2.14.0
             python-version: "3.11"
 
     steps:
