--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -40,6 +40,8 @@ jobs:
             python-version: "3.11"
           - tf-version: 2.14.0
             python-version: "3.11"
+          - tf-version: 2.15.0
+            python-version: "3.11"
 
     steps:
       - uses: actions/checkout@v4
